# advent_of_code_2024

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  run.py
common/: Cargo.toml
common/src/: io.rs  iter.rs  lib.rs  num.rs  solver.rs
day_1/: Cargo.toml
day_1/src/: main.rs
day_10/: Cargo.toml
day_10/src/: main.rs
day_11/: Cargo.toml
day_11/src/: main.rs
day_11_std/: Cargo.toml
day_11_std/src/: main.rs
day_12/: Cargo.toml
day_12/src/: main.rs
day_13/: Cargo.toml
day_13/src/: main.rs
day_14/: Cargo.toml
day_14/src/: main.rs
day_15/: Cargo.toml
day_15/src/: main.rs
day_16/: Cargo.toml
day_16/src/: main.rs
day_16_std/: Cargo.toml  inputs
day_16_std/src/: main.rs
day_17/: Cargo.toml
day_17/src/: main.rs
day_18_std/: Cargo.toml
day_18_std/src/: main.rs
day_19/: Cargo.toml
day_19/src/: main.rs
day_19_std/: Cargo.toml  inputs
day_19_std/src/: main.rs
day_2/: Cargo.toml
day_2/src/: main.rs
day_20_std/: Cargo.toml
day_20_std/src/: main.rs
day_3/: Cargo.toml
day_3/src/: main.rs
day_4/: Cargo.toml
day_4/src/: main.rs
day_5/: Cargo.toml
day_5/src/: main.rs
day_6/src/: main.rs
day_6_std/: Cargo.toml  inputs
day_6_std/src/: main.rs
day_7/: Cargo.toml
day_7/src/: main.rs
day_8/: Cargo.toml
day_8/src/: main.rs
day_9/: Cargo.toml
day_9/src/: main.rs
poc/: Cargo.toml  sdkconfig.defaults
poc/.cargo/: config.toml
poc/src/: main.rs
