[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Oliver Hofkens <oliver@gorilla.co>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
