[package]
name = "advent-of-code-2024"
version = "0.1.0"
authors = ["Oliver Hofkens <oli.hofkens@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
defmt = { version = "0.3.8" }
embedded-io = { version = "0.6.1" }
esp-backtrace = { version = "0.14.2", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.21.0", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = [
  "defmt-espflash",
  "esp32c3",
  "log",
] }
log = { version = "0.4.22" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
